# exact-cover-problem

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/exact_cover/: cli.py  cnf.py  exact_cover.py  glucose.py
testing_dataset/: 01_wiki_example_1_sat.in  01_wiki_example_unsat.in  02_wiki_example_2_sat.in  02_wiki_example_2_unsat.in  03_hard_problem_sat.in
