[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exact-cover"
version = "0.1.0"
description = "Solves the Exact Cover problem."
authors = [
    { name = "Samuel Bartík", email = "bartiksamuel@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = []

[project.scripts]
exact-cover = "exact_cover.cli:main"

